flowc/tests/fixtures/check_e144_arg_type_mismatch.flow
type User = { id: string }

tool create_user(age: int) -> User
  effect deterministic

flow demo(User) -> User {
  u = create_user(age: it.id)
  u
}
